[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "barreralabdrivers"
version = "0.1.0"
authors = [
  { name="Vishwanath Wimalasena", email="vishy235@gmail.com" },
]
description = "Drivers and utilities for instrument control in the Barrera Lab"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial >= 3.5"
]

[project.scripts]
serial-monitor = "barreralabdrivers.utils.serial_monitor:start_serial_monitor_cli"

[project.urls]
Homepage = "https://github.com/barreralab/BarreraLabDrivers"
Issues = "https://github.com/barreralab/BarreraLabDrivers/Issues"
